Corrigidos bugs de acentuação e de a classe não descarregar quando o algoritmo mudava